--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="es">
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,7 +41,7 @@
 			<p>Estas escuchando nuestra radio en vivo</p>
 
 			<div id="metadata">
-				<p id="metadata-artist">Artist</p>
+				<img id="metadata-cover" alt="Caratula">				
 				<p id="metadata-track">Song</p>
 			</div>			
 
